RR: solved page fill layout issue. -- Panel now resize properly with window size changes. Scroll bar appears correclty.

--- a/HUNI/trunk/VL_GWT_prototype/war/virtual_laboratory.css
+++ b/HUNI/trunk/VL_GWT_prototype/war/virtual_laboratory.css
@@ -41,6 +41,7 @@ h1 {
 
 .huni-vl-root-layout {
 	margin: 10px 10px 10px;
+	overflow: scroll;
 }
 
 /** Header Name */
